act. tablas 9 agosto 2022

--- a/actividad 8-8-2022/act. hipervinculos/argentina.html
+++ b/actividad 8-8-2022/act. hipervinculos/argentina.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +7,154 @@
     <title>Argentina</title>
 </head>
 <body>
-    <div>
-       <h1>Argentina</h1>
-        <img src="assets/images/argentina.webp" width="450" height="300" alt="">
-        <br><br>
-        <button><a href="index.html">Atrás</a></button> 
+    <div class="contenedor">
+        <div>
+            <h1>Argentina</h1>
+            <img src="assets/images/argentina.webp" width="450" height="300" alt="">
+            <br><br>
+        </div>
+        <h2>Provincias y Capitales</h2>
+        <br>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Provincias</th>
+                        <th>Capital</th>
+                        <th>Población</th> 
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Argentina</td>
+                        <td>Buenos Aires</td>
+                        <td>47.327.407</td>
+                    </tr>
+                    <tr>
+                        <td>Buenos Aires</td>
+                        <td>La Plata</td>
+                        <td>2.890.151</td> 
+                    </tr>
+                    <tr>
+                        <td>Catamarca</td>
+                        <td>San Fernando del Valle de Catamarca</td>
+                        <td>1.356.908</td> 
+                    </tr>
+                    <tr>
+                        <td>Chaco</td>
+                        <td>Resistencia</td>
+                        <td>2.367.098</td> 
+                    </tr>
+                    <tr>
+                        <td>Chubut</td>
+                        <td>Rawson</td>
+                        <td>987.534</td> 
+                    </tr>
+                    <tr>
+                        <td>Córdoba</td>
+                        <td>Córdoba</td>
+                        <td>996.239</td> 
+                    </tr>
+                    <tr>
+                        <td>Corrientes</td>
+                        <td>Corrientes</td>
+                        <td>2.690.141</td> 
+                    </tr>
+                    <tr>
+                        <td>Entre Ríos</td>
+                        <td>Paraná</td>
+                        <td>2.523.151</td> 
+                    </tr>
+                    <tr>
+                        <td>Formosa</td>
+                        <td>Formosa</td>
+                        <td>1.345.851</td> 
+                    </tr>
+                    <tr>
+                        <td>Jujuy</td>
+                        <td>San Salvador de Jujuy</td>
+                        <td>356.098</td> 
+                    </tr>
+                    <tr>
+                        <td>La Pampa</td>
+                        <td>Santa Rosa</td>
+                        <td>287.547</td> 
+                    </tr>
+                    <tr>
+                        <td>La Rioja</td>
+                        <td>La Rioja</td>
+                        <td>289.151</td> 
+                    </tr>
+                    <tr>
+                        <td>Mendoza</td>
+                        <td>Mendoza</td>
+                        <td>15.123</td> 
+                    </tr>
+                    <tr>
+                        <td>Misiones</td>
+                        <td>Posadas</td>
+                        <td>251.674</td> 
+                    </tr>
+                    <tr>
+                        <td>Neuquén</td>
+                        <td>Neuquén</td>
+                        <td>890.151</td> 
+                    </tr>
+                    <tr>
+                        <td>Río Negro</td>
+                        <td>Viedma</td>
+                        <td>234.151</td> 
+                    </tr>
+                    <tr>
+                        <td>Salta</td>
+                        <td>Salta</td>
+                        <td>90.151</td> 
+                    </tr>
+                    <tr>
+                        <td>San Juan</td>
+                        <td>San Juan</td>
+                        <td>521.484</td> 
+                    </tr>
+                    <tr>
+                        <td>San Luis</td>
+                        <td>San Luis</td>
+                        <td>356.876</td> 
+                    </tr>
+                    <tr>
+                        <td>Sata Cruz</td>
+                        <td>Río Gallegos</td>
+                        <td>298.474</td> 
+                    </tr>
+                    <tr>
+                        <td>Santa Fe</td>
+                        <td>Santa Fe</td>
+                        <td>30.774</td> 
+                    </tr>
+                    <tr>
+                        <td>Santiago del Estero</td>
+                        <td>Santiago del Estero</td>
+                        <td>218.736</td> 
+                    </tr>
+                    <tr>
+                        <td>Tierra del Fuego, Antártida en Islas del Atlántico Sur</td>
+                        <td>Ushuaia</td>
+                        <td>251.383</td> 
+                    </tr>
+                    <tr>
+                        <td>Tucumán</td>
+                        <td>San Miguel de Tucumán</td>
+                        <td>22.747</td> 
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <br>
+        <div>
+            <button><a href="index.html">Atrás</a></button> 
+        </div>
+        
     </div>
+
     
 </body>
 </html>
