--- a/actividad 8-8-2022/act. hipervinculos/chile.html
+++ b/actividad 8-8-2022/act. hipervinculos/chile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,110 @@
 </head>
 <body>
     <div>
-       <h1>Chile</h1>
-        <img src="assets/images/chile.jpg" width="450" height="300" alt="">
-        <br><br>
-        <button><a href="index.html">Atrás</a></button> 
+        <div>
+            <h1>Chile</h1>
+            <img src="assets/images/chile.jpg" width="450" height="300" alt="">
+            <br><br> 
+        </div>
+        <h2>Regiones y Capitales</h2>
+        <br>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Regiones</th>
+                        <th>Capital</th>
+                        <th>Población</th> 
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Chile</td>
+                        <td>Santiago de Chile</td>
+                        <td>19.212.362</td>
+                    </tr>
+                    <tr>
+                        <td>Arica y Parinacota</td>
+                        <td>Arica</td>
+                        <td>239.843</td> 
+                    </tr>
+                    <tr>
+                        <td>Tarapacá</td>
+                        <td>Iquique</td>
+                        <td>42.225</td> 
+                    </tr>
+                    <tr>
+                        <td>Antofagasta</td>
+                        <td>Antofagasta</td>
+                        <td>126.049</td> 
+                    </tr>
+                    <tr>
+                        <td>Atacama</td>
+                        <td>Copiapó</td>
+                        <td>75.176</td> 
+                    </tr>
+                    <tr>
+                        <td>Coquimbo</td>
+                        <td>La Serena</td>
+                        <td>40.579</td> 
+                    </tr>
+                    <tr>
+                        <td>Valparaíso</td>
+                        <td>Valparaíso</td>
+                        <td>104.787</td> 
+                    </tr>
+                    <tr>
+                        <td>Metropolitana de Santiago</td>
+                        <td>Santiago</td>
+                        <td>98.848</td> 
+                    </tr>
+                    <tr>
+                        <td>Libertador General Bernardo O'Higgins</td>
+                        <td>Rancagua</td>
+                        <td>75.940</td> 
+                    </tr>
+                    <tr>
+                        <td>Maule</td>
+                        <td>Talca</td>
+                        <td>109.393</td> 
+                    </tr>
+                    <tr>
+                        <td>Biobío</td>
+                        <td>Concepción</td>
+                        <td>84.049</td> 
+                    </tr>
+                    <tr>
+                        <td>La Araucanía</td>
+                        <td>Temuco</td>
+                        <td>202.292</td> 
+                    </tr>
+                    <tr>
+                        <td>Los Ríos</td>
+                        <td>Valdivia</td>
+                        <td>86.082</td> 
+                    </tr>
+                    <tr>
+                        <td>Los Lagos</td>
+                        <td>Puerto Montt</td>
+                        <td>183.290</td> 
+                    </tr>
+                    <tr>
+                        <td>Aysén del General Carlos Ibáñez del Campo</td>
+                        <td>Coyhaique</td>
+                        <td>309.945</td> 
+                    </tr>
+                    <tr>
+                        <td>Magallanes y de la Antártica Chilena</td>
+                        <td>Punta Arenas</td>
+                        <td>489.093</td> 
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <br>
+        <div>
+           <button><a href="index.html">Atrás</a></button>  
+        </div>
     </div>
-    
 </body>
 </html>
