--- a/actividad 8-8-2022/act. hipervinculos/colombia.html
+++ b/actividad 8-8-2022/act. hipervinculos/colombia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,200 @@
 </head>
 <body>
     <div>
-       <h1>Colombia</h1>
-        <img src="assets/images/colombia.webp" width="450" height="300" alt="">
-        <br><br>
-        <button><a href="index.html">Atrás</a></button> 
+        <div>
+            <h1>Colombia</h1>
+             <img src="assets/images/colombia.webp" width="450" height="300" alt="">
+             <br><br>
+         </div>
+         <h2>Departamentos y Capitales</h2>
+         <br>
+         <div>
+             <table>
+                 <thead>
+                     <tr>
+                         <th>Departamentos</th>
+                         <th>Capital</th>
+                         <th>Población</th> 
+                     </tr>
+                 </thead>
+                 <tbody>
+                    <tr>
+                        <td>Colombia</td>
+                        <td>Bogotá</td>
+                        <td>51.049.000</td>
+                    </tr>
+                     <tr>
+                         <td>Amazonas</td>
+                         <td>Leticia</td>
+                         <td>74.541</td> 
+                     </tr>
+                     <tr>
+                         <td>Antioquia</td>
+                         <td>Medellín</td>
+                         <td>6.456.207</td> 
+                     </tr>
+                     <tr>
+                         <td>Arauca</td>
+                         <td>Arauca</td>
+                         <td>262.315</td> 
+                     </tr>
+                     <tr>
+                         <td>Atlántico</td>
+                         <td>Barranquilla</td>
+                         <td>2.461.001</td> 
+                     </tr>
+                     <tr>
+                         <td>Bogotá</td>
+                         <td>Bogotá</td>
+                         <td>7.878.783</td> 
+                     </tr>
+                     <tr>
+                         <td>Bolívar</td>
+                         <td>Cartagena</td>
+                         <td>2.097.086</td> 
+                     </tr>
+                     <tr>
+                         <td>Boyacá</td>
+                         <td>Tunja</td>
+                         <td>1.276.367</td> 
+                     </tr>
+                     <tr>
+                         <td>Caldas</td>
+                         <td>Manizales</td>
+                         <td>988.003</td> 
+                     </tr>
+                     <tr>
+                         <td>Caquetá</td>
+                         <td>Florencia</td>
+                         <td>477.619</td> 
+                     </tr>
+                     <tr>
+                         <td>Casanare</td>
+                         <td>Yopal</td>
+                         <td>356.438</td> 
+                     </tr>
+                     <tr>
+                         <td>Cauca</td>
+                         <td>Popayán</td>
+                         <td>1.379.070</td> 
+                     </tr>
+                     <tr>
+                         <td>Cesar</td>
+                         <td>Valledupar</td>
+                         <td>1.028.880</td> 
+                     </tr>
+                     <tr>
+                         <td>Chocó</td>
+                         <td>Quibdó</td>
+                         <td>500.076</td> 
+                     </tr>
+                     <tr>
+                         <td>Cordoba</td>
+                         <td>Montería</td>
+                         <td>1.709.603</td> 
+                     </tr>
+                     <tr>
+                         <td>Cundinamarca</td>
+                         <td>Bogotá</td>
+                         <td>2.680.041</td> 
+                     </tr>
+                     <tr>
+                         <td>Guainía</td>
+                         <td>Inírida</td>
+                         <td>40.203</td> 
+                     </tr>
+                     <tr>
+                         <td>Guaviare</td>
+                         <td>San Jose del Guaviare</td>
+                         <td>107.934</td> 
+                     </tr>
+                     <tr>
+                         <td>Huila</td>
+                         <td>Neiva</td>
+                         <td>1.154.804</td> 
+                     </tr>
+                     <tr>
+                         <td>La Guajira</td>
+                         <td>Riohacha</td>
+                         <td>957.814</td> 
+                     </tr>
+                     <tr>
+                         <td>Magdalena</td>
+                         <td>Santa Marta</td>
+                         <td>1.259.667</td> 
+                     </tr>
+                     <tr>
+                         <td>Meta</td>
+                         <td>Villavicencio</td>
+                         <td>961.292</td> 
+                     </tr>
+                     <tr>
+                         <td>Nariño</td>
+                         <td>Pasto</td>
+                         <td>1.744.275</td> 
+                     </tr>
+                     <tr>
+                         <td>Norte de Santander</td>
+                         <td>Cúcuta</td>
+                         <td>1.355.723</td> 
+                     </tr>
+                     <tr>
+                        <td>Putumayo</td>
+                        <td>Mocoa</td>
+                        <td>345.204</td> 
+                    </tr>
+                    <tr>
+                        <td>Quindío</td>
+                        <td>Armenía</td>
+                        <td>565.266</td> 
+                    </tr>
+                    <tr>
+                        <td>Risaralda</td>
+                        <td>Pereira</td>
+                        <td>951.945</td> 
+                    </tr>
+                    <tr>
+                        <td>San Andrés y Providencia</td>
+                        <td>San Andrés</td>
+                        <td>76.442</td> 
+                    </tr>
+                    <tr>
+                        <td>Santander</td>
+                        <td>Bucaramanga</td>
+                        <td>2.061.095</td> 
+                    </tr>
+                    <tr>
+                        <td>Sucre</td>
+                        <td>Sincelejo</td>
+                        <td>851.526</td> 
+                    </tr>
+                    <tr>
+                        <td>Tolima</td>
+                        <td>Ibagué</td>
+                        <td>1.408.274</td>
+                    </tr>
+                    <tr>
+                        <td>Valle del Cauca</td>
+                        <td>Cali</td>
+                        <td>4.613.377</td> 
+                    </tr>
+                    <tr>
+                        <td>Vaupés</td>
+                        <td>Mitú</td>
+                        <td>42.817</td> 
+                    </tr>
+                    <tr>
+                        <td>Vichada</td>
+                        <td>Puerto Carreño</td>
+                        <td>68.575</td> 
+                    </tr>
+                 </tbody>
+             </table>
+         </div>
+         <br>
+         <div>
+             <button><a href="index.html">Atrás</a></button> 
+         </div>     
     </div>
     
 </body>
