--- a/actividad 8-8-2022/act. hipervinculos/ecuador.html
+++ b/actividad 8-8-2022/act. hipervinculos/ecuador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,155 @@
 </head>
 <body>
     <div>
-       <h1>Ecuador</h1>
-        <img src="assets/images/ecuador.webp" width="450" height="300" alt="">
-        <br><br>
-        <button><a href="index.html">Atrás</a></button> 
+        <div>
+            <h1>Ecuador</h1>
+            <img src="assets/images/ecuador.webp" width="450" height="300" alt="">
+            <br><br> 
+        </div>
+        <h2>Providencias y Capitales</h2>
+        <br>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Provincias</th>
+                        <th>Capital</th>
+                        <th>Población</th> 
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Ecuador</td>
+                        <td>Quito</td>
+                        <td>17.888.474</td>
+                    </tr>
+                    <tr>
+                        <td>Azuay</td>
+                        <td>Cuenca</td>
+                        <td>298.033</td> 
+                    </tr>
+                    <tr>
+                        <td>Bolívar</td>
+                        <td>Guaranda</td>
+                        <td>309.293</td> 
+                    </tr>
+                    <tr>
+                        <td>Cañar</td>
+                        <td>Azogues</td>
+                        <td>198.983</td> 
+                    </tr>
+                    <tr>
+                        <td>Carchi</td>
+                        <td>Tulcán</td>
+                        <td>109.393</td> 
+                    </tr>
+                    <tr>
+                        <td>Chimborazo</td>
+                        <td>Riobamba</td>
+                        <td>98.303</td> 
+                    </tr>
+                    <tr>
+                        <td>Cotopaxi</td>
+                        <td>Latacunga</td>
+                        <td>104.690</td> 
+                    </tr>
+                    <tr>
+                        <td>El Oro</td>
+                        <td>Machala</td>
+                        <td>86.200</td> 
+                    </tr>
+                    <tr>
+                        <td>Esmeraldas</td>
+                        <td>Esmeraldas</td>
+                        <td>99.927</td> 
+                    </tr>
+                    <tr>
+                        <td>Galápagos</td>
+                        <td>Puerto Baquerizo Moreno</td>
+                        <td>189.300</td> 
+                    </tr>
+                    <tr>
+                        <td>Guayas</td>
+                        <td>Guayaquil</td>
+                        <td>78.044</td> 
+                    </tr>
+                    <tr>
+                        <td>Imbabura</td>
+                        <td>Ibarra</td>
+                        <td>66.049</td> 
+                    </tr>
+                    <tr>
+                        <td>Loja</td>
+                        <td>Loja</td>
+                        <td>49.028</td> 
+                    </tr>
+                    <tr>
+                        <td>Los Ríos</td>
+                        <td>Babahoyo</td>
+                        <td>98.303</td> 
+                    </tr>
+                    <tr>
+                        <td>Manabí</td>
+                        <td>Portoviejo</td>
+                        <td>49.892</td> 
+                    </tr>
+                    <tr>
+                        <td>Morona-Santiago</td>
+                        <td>Macas</td>
+                        <td>94.020</td> 
+                    </tr>
+                    <tr>
+                        <td>Napo</td>
+                        <td>Tena</td>
+                        <td>123.039</td> 
+                    </tr>
+                    <tr>
+                        <td>Orellana</td>
+                        <td>Puerto Francisco de Orellana</td>
+                        <td>229.091</td> 
+                    </tr>
+                    <tr>
+                        <td>Pastaza</td>
+                        <td>Puyo</td>
+                        <td>119.093</td> 
+                    </tr>
+                    <tr>
+                        <td>Pichincha</td>
+                        <td>Quito</td>
+                        <td>99.383</td> 
+                    </tr>
+                    <tr>
+                        <td>Santa Elena</td>
+                        <td>Santa Elena</td>
+                        <td>154.930</td> 
+                    </tr>
+                    <tr>
+                        <td>Santo Domingo de los Tsáchilas</td>
+                        <td>Santo Domingo de los Colorados</td>
+                        <td>69.094</td> 
+                    </tr>
+                    <tr>
+                        <td>Sucumbíos</td>
+                        <td>Nueva Loja</td>
+                        <td>98.039</td> 
+                    </tr>
+                    <tr>
+                        <td>Tungurahua</td>
+                        <td>Ambato</td>
+                        <td>87.300</td> 
+                    </tr>
+                    <tr>
+                        <td>Zamora-Chinchipe</td>
+                        <td>Zamora</td>
+                        <td>78.209</td> 
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <br>
+        <div>
+            <button><a href="index.html">Atrás</a></button>
+        </div>
     </div>
-    
 </body>
 </html>
